--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@
 body {
     height: 100vh;
     margin: 0;
-    overflow: hidden;
+    overflow-y: scroll;
     /*background-color: #ebecf0;*/
     /*background-color: #ad84fa;*/
     /*background-color: rgb(248, 248, 248);
@@ -63,7 +63,7 @@ body {
     /*height: 25vmin;*/
     /*border: 1px solid #000;*/
     padding: 1%;
-    max-height: 25vmin;
+    max-height: 15vmin;
   }
 
   .secondRow h5{
@@ -83,7 +83,7 @@ body {
     border: 1px solid #979797;
     display: flex;
     flex-direction: column; /*incredibly important*/
-    max-height: 23vmin;
+    max-height: 13vmin;
   }
 
   
@@ -153,6 +153,7 @@ body {
     /*background-color: rgb(208, 117, 216);*/
     max-height: 42vmin;
     padding: 2%;
+    padding-bottom: 0%;
     /*padding-left: 2%;
     padding-right: 2%;*/
     /*overflow: hidden;*/
